objects/Project_Resource_Hours__c/Project_Resource_Hours__c.object-meta.xml
<CustomObject>
    <label>Project Resource Hours</label>
    <nameField>
        <displayFormat>RH-{0000}</displayFormat>
        <label>Resource Hour Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Resource Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>