objects/Project_Resource_Hours__c/fields/Project_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Resource_Name__c</fullName>
    <formula>Resource__r.Resource_User__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Resource Name</label>
    <type>Text</type>
</CustomField>