objects/Project_Resource_Hours__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <label>Resource</label>
    <referenceTo>Project_Resource__c</referenceTo>
    <relationshipLabel>Project Resource Hours</relationshipLabel>
    <relationshipName>Resource_Hours</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>