objects/Project_Resource_Hours__c/fields/Resource_Week__c.field-meta.xml
<CustomField>
    <fullName>Resource_Week__c</fullName>
    <description>The week the hours were worked</description>
    <label>Resource Week</label>
    <required>true</required>
    <type>Date</type>
</CustomField>